# Programmentwurf2

./: CMakeLists.txt
include/: developer.hpp  juniordeveloper.hpp  seniordeveloper.hpp
src/: developer.cpp  juniordeveloper.cpp  main.cpp  seniordeveloper.cpp
test/: developer_test.cpp
